--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,8 @@ featureFolders =
 cucumberOptions =
 
 #Web Sites
-baseurl = http://www.phptravels.net/admin
+baseurl.PHP_TRAVELS = http://www.phptravels.net/admin
+baseurl.Store = http://localhost:4200
 
 #Waits
 implicitTimeWait=15
