--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ cucumberOptions =
 
 #Web Sites
 #baseurl = http://www.phptravels.net/admin
-baseurl = https://us.puma.com/en/us/mens/shoes
+baseurl = https://www.adidas.mx/
 
 #Waits
 implicitTimeWait=15
